fix validation for ApiErrors