@@ -1,22 +1,32 @@
 package dev.kalbarczyk.sportsmanager.common.model.dto;
 
-import jakarta.validation.constraints.NotBlank;
-import lombok.NonNull;
-
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 public record ApiError(
-        @NonNull LocalDateTime timestamp,
+        LocalDateTime timestamp,
         int status,
-        @NotBlank String error,
-        @NotBlank String message,
+        String error,
+        String message,
         List<String> errors
 ) {
 
     public ApiError {
+        Objects.requireNonNull(timestamp, "timestamp must not be null");
+        Objects.requireNonNull(error, "error must not be null");
+        Objects.requireNonNull(message, "message must not be null");
+
+        if (error.isBlank()) {
+            throw new IllegalArgumentException("error must not be blank.");
+        }
+        if (message.isBlank()) {
+            throw new IllegalArgumentException("message must not be blank.");
+        }
+
         if (errors == null) {
-            errors = List.of();
+            errors = Collections.emptyList();
         }
     }
 
